yet another adjustment to pages

--- a/public/views/partial-participant-registered.html
+++ b/public/views/partial-participant-registered.html
@@ -1,7 +1,9 @@
 	<div class="container">
+
 			<h2 class="text-orange text-large top-pad">The Beauty of Data</h2>
-			<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
-			<p class="text-white text-small">Vakkert i seg selv. Viktig for den det gjelder.</p>
+			<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
+			<p class="text-white text-smaller">Vakkert i seg selv. Viktig for den det gjelder.</p>
+
 			<br><br><br>
 			<div class="text-white">
 				<p>	Takk for din påmelding! </p>
@@ -14,5 +16,6 @@
 						</span>
 						Tilbake til meny
 					</a>
-				<div class="logo-bottom-bouvet"> <img src="./photos/logo1.png"> </div>
+					<br><br><br>
+				<div class="logo-bottom-bouvet-absolute"> <img src="./photos/logo1.png"> </div>
 			</div>
