--- a/public/views/partial-register-answer.html
+++ b/public/views/partial-register-answer.html
@@ -91,7 +91,7 @@
 							<input type="radio" name="pa_hodet" value="hette" ng-model="formData.pa_hodet" make-radio-button-detect-change>Hette<br>
 						</label>
 						<label class="btn btn-response" name="hjelm">
-							<input type="radio" name="pa_hodet" value="hjelm" ng-model="formData.pa_hodet" make-radio-button-detect-change>Hjem<br>
+							<input type="radio" name="pa_hodet" value="hjelm" ng-model="formData.pa_hodet" make-radio-button-detect-change>Hjelm<br>
 						</label>
 						<label class="btn btn-response" name="solbriller">
 							<input type="radio" name="pa_hodet" value="solbriller" ng-model="formData.pa_hodet" make-radio-button-detect-change>Solbriller<br>
