--- a/public/views/partial-register-participant.html
+++ b/public/views/partial-register-participant.html
@@ -1,9 +1,10 @@
 		<div class="text-large"> &nbsp <img src="./photos/logo_medium.png"> </div>
-		<div class="container">
-			<h2 class="text-orange text-large ">The Beauty of Data</h2>
-				
-			<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
-			<p class="text-white text-small">Vakkert i seg selv. Viktig for den det gjelder.</p>
+		
+		<div class="container">	
+			<h2 class="text-orange text-large top-pad">The Beauty of Data</h2>
+			<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
+			<p class="text-white text-smaller">Vakkert i seg selv. Viktig for den det gjelder.</p>
+			
 			<br>
 			<div class="text-white">
 				<p> Dine svar er nå registrert.</p>
@@ -38,7 +39,7 @@
 					<br>
 
 				<div>
-					<a href="#/partial-start" name="escapeButton" class="btn btn-escape text-small">
+					<a href="#/partial-index" name="escapeButton" class="btn btn-escape text-small">
 						Nei takk, tilbake til hovedsiden
 					</a>
 					<br>
