Questions are now read from the controller by nested ng-repeat

--- a/public/views/partial-register-answer.html
+++ b/public/views/partial-register-answer.html
@@ -6,286 +6,25 @@
 			
 
 
-
-			<div class="container">
-
-
-
-
-
-				<div class="col-sm-3 container">
-					<div class="btn-group-vertical col-bottom-border" id="kjonn" data-toggle="buttons">
-						<div class="header-question"> Kjønn: </div><br>
-						
-						<label class="btn btn-response" name="mann">
-							<input type="radio" name="kjonn" value="mann" ng-model="formData.kjonn" make-radio-button-detect-change>Mann<br>
-						</label>
-						<label class="btn btn-response" name="kvinne">
-							<input type="radio" name="kjonn" value="kvinne"  ng-model="formData.kjonn" make-radio-button-detect-change>Kvinne<br>
-						</label>
+		<div class="container">
+			<div ng-repeat="col in questions">
+				<div ng-class="{'col-sm-3 container' : true, 'col-left-border': col === questions.BsecondCol || col === questions.CthirdCol || col === questions.DfourthCol}">	
+					<div ng-repeat="question in col">
+						<div ng-class="{'btn-group-vertical' : true, 'col-bottom-border' : !$last}" id="{{question.name}}" data-toggle="buttons">
+							<div class="header-question">{{question.title}}:</div><br>
+							<label ng-repeat="option in question.options"class="btn btn-response" name="{{option.value}}">
+								<input type="radio" name="{{question.name}}" value="{{option.value}}" ng-model="formData[question.name]" make-radio-button-detect-change>{{option.output}}<br>
+							</label>
+								<br>
+						</div>
 						<br>
+						<br ng-hide="$last">
 					</div>
-					<br><br>
-
-
-
-					<div class="btn-group-vertical col-bottom-border" id="sivilstatus" data-toggle="buttons">
-						<div class="header-question"> Sivilstatus: </div><br>
-						<label class="btn btn-response" name="gift/samboer">
-							<input type="radio" name="sivilstatus" value="gift/samboer" ng-model="formData.sivilstatus" make-radio-button-detect-change>Gift/Samboer<br>
-						</label>
-						<label class="btn btn-response" name="skilt">
-							<input type="radio" name="sivilstatus" value="skilt" ng-model="formData.sivilstatus" make-radio-button-detect-change>Skilt<br>
-						</label>
-						<label class="btn btn-response" name="singel">
-							<input type="radio" name="sivilstatus" value="singel" ng-model="formData.sivilstatus" make-radio-button-detect-change>Singel<br>
-						</label>
-						<label class="btn btn-response" name="complicated">
-							<input type="radio" name="sivilstatus" value="complicated" ng-model="formData.sivilstatus" make-radio-button-detect-change>It's complicated<br>
-						</label>
-						<br>
-					</div>	
-					<br><br><br>
-
-
-
-					<div class="btn-group-vertical" id="alder" data-toggle="buttons">
-						<div class="header-question"> Alder: </div><br>
-						<label class="btn btn-response" name="youngster">
-							<input type="radio" name="alder" value="youngster" ng-model="formData.alder" make-radio-button-detect-change>Youngster<br>
-						</label>
-						<label class="btn btn-response" name="coolcat">
-							<input type="radio" name="alder" value="coolcat" ng-model="formData.alder" make-radio-button-detect-change>Cool Cat<br>
-						</label>
-						<label class="btn btn-response" name="hipster">
-							<input type="radio" name="alder" value="hipster" ng-model="formData.alder" make-radio-button-detect-change>Hipster<br>
-						</label>
-						<label class="btn btn-response" name="gammelringrev">
-							<input type="radio" name="alder" value="gammelringrev" ng-model="formData.alder" make-radio-button-detect-change>Gammel Ringrev<br>
-						</label>
-						<br>
-					</div>
+					<br ng-show="col === questions.BsecondCol || col === questions.DfourthCol">
 				</div>
-
-
-
-
-
-
-
-
-
-
-
-
-				<div class="col-sm-3 container col-left-border">
-					<div class="btn-group-vertical col-bottom-border" id="pa_hodet" data-toggle="buttons">
-						<div class="header-question"> På hodet: </div><br>
-						<label class="btn btn-response" name="caps">
-							<input type="radio" name="pa_hodet" value="caps" ng-model="formData.pa_hodet" make-radio-button-detect-change>Caps<br>
-						</label>
-						<label class="btn btn-response" name="turban">
-							<input type="radio" name="pa_hodet" value="turban" ng-model="formData.pa_hodet" make-radio-button-detect-change>Turban<br>
-						</label>
-						<label class="btn btn-response" name="hette">
-							<input type="radio" name="pa_hodet" value="hette" ng-model="formData.pa_hodet" make-radio-button-detect-change>Hette<br>
-						</label>
-						<label class="btn btn-response" name="hjelm">
-							<input type="radio" name="pa_hodet" value="hjelm" ng-model="formData.pa_hodet" make-radio-button-detect-change>Hjem<br>
-						</label>
-						<label class="btn btn-response" name="solbriller">
-							<input type="radio" name="pa_hodet" value="solbriller" ng-model="formData.pa_hodet" make-radio-button-detect-change>Solbriller<br>
-						</label>
-						<label class="btn btn-response" name="hijab">
-							<input type="radio" name="pa_hodet" value="hijab" ng-model="formData.pa_hodet" make-radio-button-detect-change>Hijab<br>
-						</label>
-						<br>
-					</div>
-					<br><br>
-
-
-
-					<div class="btn-group-vertical col-bottom-border" id="studiested" data-toggle="buttons">
-						<div class="header-question"> Studiested: </div><br>
-						<label class="btn btn-response" name="ntnu">
-							<input type="radio" name="studiested" value="ntnu" ng-model="formData.studiested" make-radio-button-detect-change>NTNU<br>
-						</label>
-						<label class="btn btn-response" name="selvlaertrover">
-							<input type="radio" name="studiested" value="selvlaertrover" ng-model="formData.studiested" make-radio-button-detect-change>Selvlært Røver<br>
-						</label>
-						<label class="btn btn-response" name="annet">
-							<input type="radio" name="studiested" value="annet" ng-model="formData.studiested" make-radio-button-detect-change>Annet<br>
-						</label>
-						<br>
-					</div>
-					<br><br>
-
-
-
-					<div class="btn-group-vertical" id="programmeringsstil" data-toggle="buttons">
-						<div class="header-question"> Programmeringsstil: </div><br>
-						<label class="btn btn-response" name="batenblirtil">
-							<input type="radio" name="programmeringsstil" value="batenblirtil" ng-model="formData.programmeringsstil" make-radio-button-detect-change>Båten blir til mens man ror<br>
-						</label>
-						<label class="btn btn-response" name="detordnerseg">
-							<input type="radio" name="programmeringsstil" value="detordnerseg" ng-model="formData.programmeringsstil" make-radio-button-detect-change>Det ordner seg<br>
-						</label>
-						<label class="btn btn-response" name="ordenungmusssein">
-							<input type="radio" name="programmeringsstil" value="ordenungmusssein" ng-model="formData.programmeringsstil" make-radio-button-detect-change>Ordenung Muss Sein<br>
-						</label>
-						<br>
-					</div>
-				</div>
-				
-
-
-
-
-
-
-
-
-
-
-
-				<div class="col-sm-3 container col-left-border">
-					
-					<div class="btn-group-vertical col-bottom-border" id="musikk" data-toggle="buttons">
-						<div class="header-question"> Musikk: </div><br>
-						<label class="btn btn-response" name="indie">
-							<input type="radio" name="musikk" value="indie" ng-model="formData.musikk" make-radio-button-detect-change>Indie<br>
-						</label>
-						<label class="btn btn-response" name="trash">
-							<input type="radio" name="musikk" value="trash" ng-model="formData.musikk" make-radio-button-detect-change>Trash<br>
-						</label>
-						<label class="btn btn-response" name="disco">
-							<input type="radio" name="musikk" value="disco" ng-model="formData.musikk" make-radio-button-detect-change>Disco<br>
-						</label>
-						<label class="btn btn-response" name="tronderrock">
-							<input type="radio" name="musikk" value="tronderrock" ng-model="formData.musikk" make-radio-button-detect-change>Trønderrock<br>
-						</label>
-						<label class="btn btn-response" name="metal">
-							<input type="radio" name="musikk" value="metal" ng-model="formData.musikk" make-radio-button-detect-change>Metal<br>
-						</label>
-						<label class="btn btn-response" name="rave">
-							<input type="radio" name="musikk" value="rave" ng-model="formData.musikk" make-radio-button-detect-change>Rave<br>
-						</label>
-						<label class="btn btn-response" name="klassisk">
-							<input type="radio" name="musikk" value="klassisk" ng-model="formData.musikk" make-radio-button-detect-change>Klassisk<br>
-						</label>
-						<br>
-					</div>
-					<br><br>
-
-
-					<div class="btn-group-vertical col-bottom-border" id="personlighet" data-toggle="buttons">
-						<div class="header-question"> Personlighet: </div><br>
-						<label class="btn btn-response" name="introvert">
-							<input type="radio" name="personlighet" value="introvert" ng-model="formData.personlighet" make-radio-button-detect-change>Introvert<br>
-						</label>
-						<label class="btn btn-response" name="ekstrovert">
-							<input type="radio" name="personlighet" value="ekstrovert" ng-model="formData.personlighet" make-radio-button-detect-change>Ekstrovert<br>
-						</label>
-						<label class="btn btn-response" name="ekstrovertpluss">
-							<input type="radio" name="personlighet" value="ekstrovertpluss" ng-model="formData.personlighet" make-radio-button-detect-change>Ekstrovert med litt innabords
-						</label>
-						<br>
-					</div>
-					<br><br>
-
-
-					<div class="btn-group-vertical" id="hypepreferanse" data-toggle="buttons">
-						<div class="header-question"> Hype-preferanse: </div><br>
-						<label class="btn btn-response" name="bigdata">
-							<input type="radio" name="hypepreferanse" value="bigdata" ng-model="formData.hypepreferanse" make-radio-button-detect-change>Big Data<br>
-						</label>
-						<label class="btn btn-response" name="internetofthings">
-							<input type="radio" name="hypepreferanse" value="internetofthings" ng-model="formData.hypepreferanse" make-radio-button-detect-change>Internet of Things<br>
-						</label>
-						<label class="btn btn-response" name="laerkidsakoding">
-							<input type="radio" name="hypepreferanse" value="laerkidsakoding" ng-model="formData.hypepreferanse" make-radio-button-detect-change>Lær Kidsa Koding<br>
-						</label>
-						<br>
-					</div>
-				</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-				<div class="col-sm-3 container col-left-border">
-					<div class="btn-group-vertical col-bottom-border" id="planerforkvelden" data-toggle="buttons">
-						<div class="header-question"> Planer for kvelden: </div><br>
-						<label class="btn btn-response" name="endresivilstatus">
-							<input type="radio" name="planer_for_kvelden" value="endresivilstatus" ng-model="formData.planer_for_kvelden" make-radio-button-detect-change>Endre sivilstatus<br>
-						</label>
-						<label class="btn btn-response" name="smiskemedsjefen">
-							<input type="radio" name="planer_for_kvelden" value="smiskemedsjefen" ng-model="formData.planer_for_kvelden" make-radio-button-detect-change>Smiske med sjefen<br>
-						</label>
-						<label class="btn btn-response" name="mingle">
-							<input type="radio" name="planer_for_kvelden" value="mingle" ng-model="formData.planer_for_kvelden" make-radio-button-detect-change>Mingle<br>
-						</label>
-						<label class="btn btn-response" name="kode">
-							<input type="radio" name="planer_for_kvelden" value="kode" ng-model="formData.planer_for_kvelden" make-radio-button-detect-change>Kode<br>
-						</label>
-						<label class="btn btn-response" name="nytelivet">
-							<input type="radio" name="planer_for_kvelden" value="nytelivet" ng-model="formData.planer_for_kvelden" make-radio-button-detect-change>Nyte livet<br>
-						</label>
-						<br>
-					</div>		
-					<br><br>
-
-
-
-					<div class="btn-group-vertical col-bottom-border" id="favorittgode" data-toggle="buttons">
-						<div class="header-question"> Favorittgode på jobb: </div><br>
-						<label class="btn btn-response" name="fribar">
-							<input type="radio" name="favorittgode" value="fribar" ng-model="formData.favorittgode" make-radio-button-detect-change>Fri bar på julebordet<br>
-						</label>
-						<label class="btn btn-response" name="gadgetkonto">
-							<input type="radio" name="favorittgode" value="gadgetkonto" ng-model="formData.favorittgode" make-radio-button-detect-change>Gadgetkonto<br>
-						</label>
-						<label class="btn btn-response" name="kurskonferanse">
-							<input type="radio" name="favorittgode" value="kurskonferanse" ng-model="formData.favorittgode" make-radio-button-detect-change>Kurs og konferanser<br>
-						</label>
-						<label class="btn btn-response" name="frikantine">
-							<input type="radio" name="favorittgode" value="frikantine" ng-model="formData.favorittgode" make-radio-button-detect-change>Fri kantine<br>
-						</label>
-						<label class="btn btn-response" name="pensjon">
-							<input type="radio" name="favorittgode" value="pensjon" ng-model="formData.favorittgode" make-radio-button-detect-change>Pensjon<br>
-						</label>
-						<br>
-					</div>
-					<br><br>
-
-
-					<div class="btn-group-vertical" id="premie" data-toggle="buttons">
-						<div class="header-question"> Premie hvis du vinner: </div><br>
-						<label class="btn btn-response" name="moto360">
-							<input type="radio" name="premie_hvis_du_vinner" value="moto360" ng-model="formData.premie_hvis_du_vinner" make-radio-button-detect-change>Moto360<br>
-						</label>
-						<label class="btn btn-response" name="oculusrift">
-							<input type="radio" name="premie_hvis_du_vinner" value="oculusrift" ng-model="formData.premie_hvis_du_vinner" make-radio-button-detect-change>Oculus Rift<br>
-						</label>
-						<br>
-					</div>
-				</div>
-
-
-				<br>
-
 			</div>
-
-
-			<br><br>
+		</div>
+		<br><br>
 
 			<div class="container">
 				<input class="btn btn-def-bouvet" name="registerButton" type="submit" value="Registrer svar">
