new test scenarios

--- a/public/views/partial-register-answer.html
+++ b/public/views/partial-register-answer.html
@@ -27,7 +27,8 @@
 		<br><br>
 
 			<div class="container">
-				<button ng-disabled="answerForm.$invalid" class="btn btn-def-bouvet" name="registerButton" type="submit">
+	<!--			<button ng-disabled="answerForm.$invalid" class="btn btn-def-bouvet" name="registerButton" type="submit"> -->
+				<button class="btn btn-def-bouvet" name="registerButton" type="submit">
 					Registrer svar
 				</button>
 			</form>
