--- a/public/views/partial-view-participants.html
+++ b/public/views/partial-view-participants.html
@@ -1,19 +1,4 @@
 <div>
-		<table class="table table-hover bg-white">
-			<thead>
-				<tr>
-					<th>epost</th>
-					<th>navn</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr ng-repeat="participant in participants">
-					<td>{{participant.email}}</td>
-					<td>{{participant.name}}</td>
-				</tr>
-			</tbody>
-		</table>
-
 		<!--a button that takes you back to the main menu -->
 		<a href="#/partial-index" name="menuButton" class="btn btn-def-bouvet">
 			<span class="glyphicon glyphicon-home">
@@ -21,16 +6,65 @@
 			Tilbake til meny
 		</a>
 
+		<button class="btn btn-def-bouvet" name="pickWinner" ng-click="pickWinner()">
+			<span class="glyphicon glyphicon-star-empty">
+			</span>
+			Trekk vinner
+		</button>
+
+			<div class="text-orange text-medium container">Deltakere</div>
+
+			<table class="table table-hover bg-white">
+				<thead>
+					<tr>
+						<th>Navn</th>
+						<th>E-post</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr ng-repeat="participant in participants">
+						<td>{{participant.name}}</td>
+						<td>{{participant.email}}</td>
+					</tr>
+				</tbody>
+			</table>
+
+		<br><br>
+
+	<div ng-show="winners.length > 0">
+		<div class="text-orange text-medium container">Vinnere</div>
+		<table class="table table-hover bg-white">
+			<thead>
+				<tr>
+					<th>Navn</th>
+					<th>E-post</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr ng-repeat="winner in winners">
+					<td>{{winner.name}}</td>
+					<td>{{winner.email}}</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+
+	<button class="btn btn-def-bouvet" name="deleteWinners" data-toggle="modal" data-target="#confirmDeleteWinnersModal">
+			<span class="glyphicon glyphicon-trash">
+			</span>
+			Slett vinnere
+		</button>
+
 		<!--a button that triggers a modal that wants you to confirm that you want to delete -->
 
-		<button class="btn btn-def-bouvet" name="deleteParticipants" data-toggle="modal" data-target="#confirmDeleteModal" >
+		<button class="btn btn-def-bouvet" name="deleteParticipants" data-toggle="modal" data-target="#confirmDeleteParticipantsModal" >
 			<span class="glyphicon glyphicon-trash">
 			</span>
 			Slett alle deltakere
 		</button>
 
-		<!-- the modal that wants you to confirm that you want to delete all participants of the database -->
-		<div class="modal" id="confirmDeleteModal" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		<!-- the modal that wants you to confirm that you want to delete all participants in the database -->
+		<div class="modal" id="confirmDeleteParticipantsModal" role="dialog" aria-hidden="true">
 			<div class="modal-dialog modal-sm">
 				<div class="modal-content ">
 					<div class ="modal-header modal-confirm-delete">
@@ -41,6 +75,24 @@
 					</div>
 					<div class="modal-footer">
 						<button class="btn modal-confirm-delete" name="confirmDelete" ng-click="deleteParticipants()" data-dismiss="modal">Slett alle</button>
+						<button class="btn btn-primary" data-dismiss="modal">Avbryt</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- the modal that wants you to confirm that you want to delete all winners in the database -->
+		<div class="modal" id="confirmDeleteWinnersModal" role="dialog" aria-hidden="true">
+			<div class="modal-dialog modal-sm">
+				<div class="modal-content ">
+					<div class ="modal-header modal-confirm-delete">
+						<h4 class="modal-title">Bekreft sletting</h4>
+					</div>
+					<div ng-class="modal-body">
+						Er du sikker på at du vil slette alle vinnere i databasen?
+					</div>
+					<div class="modal-footer">
+						<button class="btn modal-confirm-delete" name="confirmDelete" ng-click="deleteWinners()" data-dismiss="modal">Slett alle</button>
 						<button class="btn btn-primary" data-dismiss="modal">Avbryt</button>
 					</div>
 				</div>
