--- a/public/views/partial-participant-registered.html
+++ b/public/views/partial-participant-registered.html
@@ -5,7 +5,7 @@
 			<p class="text-white text-smaller">Vakkert i seg selv. Viktig for den det gjelder.</p>
 
 			<br><br><br>
-			<div class="text-white">
+			<div class="text-white text-smaller">
 				<p>	Takk for din påmelding! </p>
 				<p> Du vil bli kontaktet på din epostadresse hvis du vinner. </p>
 				</div>
