--- a/public/views/partial-view-participants.html
+++ b/public/views/partial-view-participants.html
@@ -1,4 +1,4 @@
-<div>
+<div class="container top-pad">
 		<!--a button that takes you back to the main menu -->
 		<a href="#/partial-index" name="menuButton" class="btn btn-def-bouvet">
 			<span class="glyphicon glyphicon-home">
@@ -11,14 +11,15 @@
 			</span>
 			Trekk vinner
 		</button>
+		<br>
 
-			<div class="text-orange text-medium container">Deltakere</div>
-
+			<div class="text-orange text-medium">Deltakere</div>
+			<br>
 			<table class="table table-hover bg-white">
 				<thead>
 					<tr>
-						<th>Navn</th>
-						<th>E-post</th>
+						<th class="container">Navn</th>
+						<th class="container">E-post</th>
 					</tr>
 				</thead>
 				<tbody>
@@ -28,7 +29,6 @@
 					</tr>
 				</tbody>
 			</table>
-
 		<br><br>
 
 	<div ng-show="winners.length > 0">
@@ -36,8 +36,8 @@
 		<table class="table table-hover bg-white">
 			<thead>
 				<tr>
-					<th>Navn</th>
-					<th>E-post</th>
+					<th class="container">Navn</th>
+					<th class="container">E-post</th>
 				</tr>
 			</thead>
 			<tbody>
