--- a/public/views/partial-register-answer.html
+++ b/public/views/partial-register-answer.html
@@ -3,7 +3,7 @@
 
 
 		<form name="answerForm" ng-submit="submitAnswer(answerForm.$valid)" novalidate>
-			<div class="container">
+			<div class="container middle-pos">
 				<div ng-repeat="col in questions">
 					<div ng-class="{'col-sm-3 container' : true, 'col-left-border': col === questions.BsecondCol || col === questions.CthirdCol || col === questions.DfourthCol}">	
 						<div ng-repeat="question in col">
@@ -24,7 +24,7 @@
 			</div>
 			<br><br>
 
-			<div class="container">
+			<div class="container middle-pos">
 
 				<button class="btn btn-def-bouvet" name="registerButton" type="submit">
 					Registrer svar
