--- a/public/views/partial-register-participant.html
+++ b/public/views/partial-register-participant.html
@@ -1,7 +1,7 @@
 		<div class="text-large"> &nbsp <img src="./photos/logo_medium.png"> </div>
 
 		
-		<div class="container">	
+		<div class="container middle-pos">	
 			<h2 class="text-orange text-large top-pad">The Beauty of Data</h2>
 			<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
 			<p class="text-white text-smaller">Vakkert i seg selv. Viktig for den det gjelder.</p>
