--- a/public/views/partial-start.html
+++ b/public/views/partial-start.html
@@ -1,4 +1,4 @@
-	<div class="container">
+	<div class="container middle-pos">
 
 			<h2 class="text-orange text-large top-pad">The Beauty of Data</h2>
 			<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
