--- a/public/views/partial-participant-registered.html
+++ b/public/views/partial-participant-registered.html
@@ -11,7 +11,7 @@
 				</div>
 				<br>
 
-					<a href="#/partial-index"class="btn btn-def-bouvet">
+					<a href="#/partial-index"class="btn btn-def-bouvet" name="menuButton">
 						<span class="glyphicon glyphicon-home">
 						</span>
 						Tilbake til meny
