--- a/public/views/partial-view-participants.html
+++ b/public/views/partial-view-participants.html
@@ -1,9 +1,8 @@
-<div class="container">
-	<div class="row top-pad">
-
-
+<div class="container-fluid">
+	
+	<div class="row top-pad-medium">
 		<!--a button that takes you back to the main menu -->
-		<div class="col-sm-3">
+		<div class="col-sm-2 col-sm-offset-1">
 			<a href="#/partial-index" name="menuButton" class="btn btn-def-bouvet">
 				<span class="glyphicon glyphicon-home">
 				</span>
@@ -11,17 +10,22 @@
 			</a>
 		</div>
 	</div>
-			<div class="row text-orange text-medium middle-pos top-pad-small">Deltakere</div>
-			
-			<div class="row text-white top-pad-small text-smaller bottom-pad-small">
-				<div class="col-sm-3 col-sm-offset-1">
-					Totalt antall deltakere: {{participants.length}}
-				</div>
-				<div class="col-sm-3 col-sm-offset-5">
-					Index: {{startParticipants + 1}} - {{startParticipants + 10}}
-				</div>
-			</div>
 
+	<div class="row text-orange text-medium middle-pos top-pad-small">
+		Deltakere
+	</div>
+			
+	<div class="row text-white top-pad-small text-smaller bottom-pad-small">
+		<div class="col-sm-3 col-sm-offset-2">
+			Totalt antall deltakere: {{participants.length}}
+		</div>
+		<div class="col-sm-3 col-sm-offset-3">
+			Index: {{startParticipants + 1}} - {{startParticipants + 10}}
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-sm-10 col-sm-offset-1">
 			<table class="table table-hover middle-pos bg-white">
 				<thead>
 					<tr>
@@ -37,53 +41,69 @@
 					</tr>
 				</tbody>
 			</table>
-
-		<div class="row">
-			<!--a button that triggers a modal that wants you to confirm that you want to delete -->
-			<div class="col-sm-6">
-				<button class="btn btn-def-bouvet" name="deleteParticipants" data-toggle="modal" data-target="#confirmDeleteParticipantsModal" >
-					<span class="glyphicon glyphicon-trash">
-					</span>
-					Slett alle deltakere
-				</button>
-
-				<button class="btn btn-def-bouvet" name="pickWinner" ng-click="pickWinner()">
-					<span class="glyphicon glyphicon-star-empty">
-					</span>
-					Trekk vinner
-				</button>
-			</div>
-
-			<div class="col-sm-5 col-sm-offset-1">
-				<button class="btn btn-def-bouvet" ng-click="tenPrevParticipants()">Se 10 forrige svar</button>
-				<button class="btn btn-def-bouvet" ng-click="tenNextParticipants()">Se 10 neste svar</button>
-			</div>
-
 		</div>
+	</div>
+
+	<div class="row">
+		<!--a button that triggers a modal that wants you to confirm that you want to delete -->
+		<div class="col-sm-5 col-sm-offset-1">
+			<button class="btn btn-def-bouvet" name="deleteParticipants" data-toggle="modal" data-target="#confirmDeleteParticipantsModal" >
+				<span class="glyphicon glyphicon-trash">
+				</span>
+				Slett alle deltakere
+			</button>
+
+			<button class="btn btn-def-bouvet" name="pickWinner" ng-click="pickWinner()">
+				<span class="glyphicon glyphicon-star-empty">
+				</span>
+				Trekk vinner
+			</button>
+		</div>
+
+		<div class="col-sm-5">
+			<div class="row">
+				<div class="col-sm-12">
+					<button class="btn btn-def-bouvet" ng-click="tenPrevParticipants()">
+						<span class="glyphicon glyphicon-chevron-left"></span>
+						Se 10 forrige svar</button>
+					<button class="btn btn-def-bouvet" ng-click="tenNextParticipants()">
+						Se 10 neste svar
+						<span class="glyphicon glyphicon-chevron-right"></span>
+					</button>
+				</div>
+			</div>
+		</div>
+	</div>
 
 		<br><br>
 
 	<div ng-show="winners.length > 0">
-		<div class="text-orange text-medium middle-pos">Vinnere</div>
+		<div class="row text-orange text-medium middle-pos">
+			Vinnere
+		</div>
 		<br>
 
-		<table class="table table-hover bg-white">
-			<thead>
-				<tr>
-					<th class="container">Navn</th>
-					<th class="container">E-post</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr ng-repeat="winner in winners">
-					<td>{{winner.name}}</td>
-					<td>{{winner.email}}</td>
-				</tr>
-			</tbody>
-		</table>
+		<div class="row">
+			<div class="col-sm-10 col-sm-offset-1">
+				<table class="table table-hover bg-white">
+					<thead>
+						<tr>
+							<th class="container">Navn</th>
+							<th class="container">E-post</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr ng-repeat="winner in winners">
+							<td>{{winner.name}}</td>
+							<td>{{winner.email}}</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
 
 		<div class="row">
-			<div class="col-sm-3">
+			<div class="col-sm-2 col-sm-offset-1">
 				<button class="btn btn-def-bouvet" name="deleteWinners" data-toggle="modal" data-target="#confirmDeleteWinnersModal">
 					<span class="glyphicon glyphicon-trash">
 					</span>
