--- a/public/views/partial-view-answers.html
+++ b/public/views/partial-view-answers.html
@@ -55,8 +55,8 @@
 			<tbody class="listview">
 				<!--the ng-class is used for dynamically assigning classes to the rows to give them different colors -->
 				<tr ng-repeat="answer in answers | answersFromTo:startAnswers:startAnswers +  limitAnswers | 
-				orderBy:[viewProcessed, 'id_answers']"
-				ng-class="{warning: answer.locked === 1, danger : answer.processed === 0 && answer.locked === 0, success : answer.processed === 1 && answer.locked === 0}">
+				orderBy:['id_answers']"
+				ng-class="{warning: answer.locked === 1, danger : answer.processed === 0 && answer.locked === 0, success : answer.processed === 1 && answer.locked === 0, 'repeated-answer' : true}">
 					<td>{{answer.id_answers}}</td>
 					<td>{{answer.sivilstatus}}</td>
 					<td>{{answer.pa_hodet}}</td>
