changed to use viewAll instead of true

--- a/public/views/partial-view-answers.html
+++ b/public/views/partial-view-answers.html
@@ -95,7 +95,7 @@
 											</div>
 											<div ng-show="oneAnswer.locked === 1">
 												<button ng-show="oneAnswer.locked === 1" class="btn btn-primary"  ng-click="closeAndUnlock(oneAnswer.id_answers)" data-dismiss="modal">Lås opp</button>
-												<button ng-show="oneAnswer.locked === 1" class="btn btn-default" ng-click="getAnswers(true)" data-dismiss="modal">Lukk</button>
+												<button ng-show="oneAnswer.locked === 1" class="btn btn-default" ng-click="getAnswers(viewAll)" data-dismiss="modal">Lukk</button>
 											</div>
 									</div>
 								</div>
